...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cosmic_latte">

    <TextView
        android:id="@+id/StudentName"
        android:layout_width="match_parent"
        android:text="@string/student_name_place_holder_for_advisor_review_student_page"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:textAlignment="textStart"
...
