...
    <item
        android:id="@+id/student_courses"
        android:title="@string/courses_fragment_title"
        android:icon="@drawable/student_courses_icon"
    />
    <item
        android:id="@+id/student_profile"
        android:title="@string/profile_fragment_title"
        android:icon="@drawable/student_profile_icon"
    />
    <item
        android:id="@+id/student_settings"
        android:title="@string/settings_fragment_title"
        android:icon="@drawable/student_settings_icon"
    />
</menu>
