<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/cosmic_latte">

<RelativeLayout
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_centerInParent="true"
    tools:ignore="UselessParent">

    <Button
        android:id="@+id/open_account_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_account_summary_button_text_in_student_profile"
        android:textAllCaps="false"
        android:layout_centerVertical="true"/>
</RelativeLayout>

</RelativeLayout>