<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.StudentProfileFragment"
    android:background="@color/cosmic_latte">


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/show_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/view_student_records_btn_text_for_student_fees_fragment"
            android:textAllCaps="false" />
    </RelativeLayout>
</FrameLayout>